# search_engine

./: Cargo.toml
flatten-serde-json/: Cargo.toml
json-depth-checker/: Cargo.toml
src/: asc_desc.rs  criterion.rs  error.rs  index.rs  lib.rs  order_by_map.rs  score_details.rs
src/facet/: value_encoding.rs
src/prompt/: error.rs
src/search/: context.rs  db_cache.rs  hybrid.rs  mod.rs  query_cache.rs  query_graph.rs  query_parser.rs  resolve_query_graph.rs  search.rs  split_config.rs  typo_config.rs
src/search/facet/: condition.rs  facet_distribution.rs  facet_distribution_iter.rs  facet_range_search.rs  facet_sort_ascending.rs  facet_sort_descending.rs  filter.rs  mod.rs  search.rs
src/search/graph_visualize/: mod.rs
src/search/matches/: matching_words.rs  mod.rs
src/search/ranking/: attribute.rs  attribute_cost.rs  bucket_sort.rs  criteria.rs  dead_ends_cache.rs  exactness.rs  mod.rs  path_visitor.rs  paths_cost.rs  proximity.rs  proximity_cost.rs  ranking_rule.rs  score.rs  sort.rs  test.rs  typos.rs  vector_sort.rs  words.rs
src/search/utils/: bit_set.rs  mod.rs  phrase_builder.rs  vec_map.rs
src/update/: analyzer_settings.rs  clear_documents.rs  indexer_config.rs  mod.rs  settings.rs  split_config.rs  typo_config.rs
src/update/facet/: bulk.rs  incremental.rs  mod.rs
src/update/index_documents/: enrich.rs  mod.rs  typed_chunk.rs
src/update/index_documents/extract/: extract_docid_word_positions.rs  extract_fid_docid_facet_values.rs  extract_word_docids.rs  mod.rs
src/vector/: error.rs  hf.rs  mod.rs
